# ezd-sdk

./: README.md  docker-compose.yml  openapi.yaml
.devcontainer/: devcontainer.json
.devcontainer/python-dev-image/: Dockerfile
python-sdk/: Makefile  pyproject.toml  requierments.txt
python-sdk/ezd/api/: client.py  exception.py
python-sdk/ezd/cli/: main.py
python-sdk/tests/: test_cli.py  test_client_api.py
